# higgsfield_AI_Engineering_Challenge

./: .env.example  .gitignore  AUDIT.md  CHANGELOG.md  Dockerfile  EVALUATION_HYBRID_PLAN.md  HYBRID_IMPL_PLAN.md  IMPROVEMENTS.md  PLAN.md  README.md  description.md  docker-compose.yml  fix-plan.md  improve-plan.md  pyproject.toml  test_comprehensive.sh
.claude/doc/: PLAN.md
different/: CHANGELOG.md  HYBRID_PLAN.md  IMPL_PLAN.md  README.md
fixtures/: conversations.json  probes.json
src/: config.py  database.py  dependencies.py  main.py
src/middleware/: auth.py  error_handler.py
src/models/: memory.py  turn.py
src/prompts/: contradiction.py  cross_key_contradiction.py  extract.py  query_rewrite.py  rerank.py  temporal.py
src/repositories/: memory_repo.py  turn_repo.py
src/routers/: cleanup.py  memories.py  recall.py  search.py  turns.py
src/schemas/: memory.py  recall.py  search.py  turn.py
src/services/: entity_graph.py  extraction_service.py  llm_service.py  memory_service.py  query.py  recall_service.py  rule_extractor.py  search_service.py
tests/: conftest.py  mock_openai.py  test_extraction_e2e.py  test_rule_extractor.py
tests/contract/: test_endpoints.py
tests/hermetic/: test_query_vocab.py  test_recall_merge.py  test_wave2_integration.py
tests/persistence/: test_restart.py
tests/recall_quality/: test_recall_fixture.py
tests/robustness/: test_concurrent_sessions.py  test_malformed_input.py
